--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ linux64:
   - git submodule init && git submodule update
   - make release-static
 
+
 win64:
   image: amityproject/win64:builder
   stage: buildrelease
@@ -19,30 +20,6 @@ win64:
   - make depends target=x86_64-w64-mingw32
 
 
-#arm64:
-#  image: ubuntu:bionic
-#  stage: buildrelease
-#  script:
-#  - apt update && apt install build-essential cmake pkg-config libboost-all-dev libssl-dev libzmq3-dev libnorm-dev libunbound-dev libsodium-dev libminiupnpc-dev libunwind8-dev liblzma-dev libreadline6-dev libldns-dev libexpat1-dev doxygen libpgm-dev graphviz git python3 bc curl autoconf g++-aarch64-linux-gnu gperf -y
-#  - git submodule init && git submodule update
-#  - cd contrib/depends/
-#  - make download
-#  - cd ../..
-#  - make depends target=aarch64-linux-gnu
-
-
-#armhf:
-#  image: ubuntu:bionic
-#  stage: buildrelease
-#  script:
-#  - apt update && apt install build-essential cmake pkg-config libboost-all-dev libssl-dev libzmq3-dev libunbound-dev libsodium-dev libminiupnpc-dev libunwind8-dev liblzma-dev libreadline6-dev libldns-dev libexpat1-dev doxygen libpgm-dev graphviz git python3 bc curl autoconf gperf g++-arm-linux-gnueabihf -y
-#  - git submodule init && git submodule update
-#  - cd contrib/depends/
-#  - make download
-#  - cd ../..
-#  - make depends target=arm-linux-gnueabihf
-
-
 macos64:
   image: amityproject/macos:builder
   stage: buildrelease
@@ -52,14 +29,62 @@ macos64:
   - make download
   - cd ../..
   - make depends target=x86_64-apple-darwin11
+  artifacts:
+    paths:
+    - ./amity-blockchain-import
+    - ./amity-blockchain-export
+    - ./amity-wallet-cli
+    - ./amity-wallet-rpc
+    - ./amityd
 
-#riscv64:
-#  image: ubuntu:bionic
-#  stage: buildrelease
-#  script:
-#  - apt update && apt install build-essential cmake pkg-config libboost-all-dev libssl-dev libzmq3-dev libunbound-dev libsodium-dev libminiupnpc-dev libunwind8-dev liblzma-dev libreadline6-dev libldns-dev libexpat1-dev doxygen libpgm-dev graphviz git python3 bc curl autoconf gperf g++-riscv64-linux-gnu -y
-#  - git submodule init && git submodule update
-#  - cd contrib/depends/
-#  - make download
-#  - cd ../..
-#  - make depends target=riscv64-linux-gnu
+
+arm64:
+  image: amityproject/aarch64:builder
+  stage: buildrelease
+  script:
+  - git submodule init && git submodule update
+  - cd contrib/depends/
+  - make download
+  - cd ../..
+  - make depends target=aarch64-linux-gnu
+  artifacts:
+    paths:
+    - ./amity-blockchain-import
+    - ./amity-blockchain-export
+    - ./amity-wallet-cli
+    - ./amity-wallet-rpc
+    - ./amityd 
+
+armhf:
+  image: amityproject/arm:builder
+  stage: buildrelease
+  script:
+  - git submodule init && git submodule update
+  - cd contrib/depends/
+  - make download
+  - cd ../..
+  - make depends target=arm-linux-gnueabihf
+  artifacts:
+    paths:
+    - ./amity-blockchain-import
+    - ./amity-blockchain-export
+    - ./amity-wallet-cli
+    - ./amity-wallet-rpc
+    - ./amityd
+
+riscv64:
+  image: amityproject/riscv64:builder
+  stage: buildrelease
+  script:
+  - git submodule init && git submodule update
+  - cd contrib/depends/
+  - make download
+  - cd ../..
+  - make depends target=riscv64-linux-gnu
+  artifacts:
+    paths:
+    - ./amity-blockchain-import
+    - ./amity-blockchain-export
+    - ./amity-wallet-cli
+    - ./amity-wallet-rpc
+    - ./amityd
