--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ linux64:
   script:
   - git submodule init && git submodule update
   - make release-static
+  - mv ./build/release/bin/* ./
 
 
 win64:
@@ -18,6 +19,7 @@ win64:
   - make download
   - cd ../..
   - make depends target=x86_64-w64-mingw32
+  - mv ./build/x86_64-w64-mingw32/release/bin/* ./
 
 
 macos64:
@@ -29,6 +31,7 @@ macos64:
   - make download
   - cd ../..
   - make depends target=x86_64-apple-darwin11
+  - mv ./build/x86_64-apple-darwin11/release/bin/* ./
   artifacts:
     paths:
     - ./amity-blockchain-import
@@ -44,9 +47,10 @@ arm64:
   script:
   - git submodule init && git submodule update
   - cd contrib/depends/
-  - make download
+  - make download-linux
   - cd ../..
   - make depends target=aarch64-linux-gnu
+  - mv ./build/aarch64-linux-gnu/release/bin/* ./
   artifacts:
     paths:
     - ./amity-blockchain-import
@@ -64,6 +68,7 @@ armhf:
   - make download
   - cd ../..
   - make depends target=arm-linux-gnueabihf
+  - mv ./build/arm-linux-gnueabihf/release/bin/* ./ 
   artifacts:
     paths:
     - ./amity-blockchain-import
@@ -81,6 +86,7 @@ riscv64:
   - make download
   - cd ../..
   - make depends target=riscv64-linux-gnu
+  - mv ./build/riscv64-linux-gnu/release/bin/* ./ 
   artifacts:
     paths:
     - ./amity-blockchain-import
@@ -88,4 +94,3 @@ riscv64:
     - ./amity-wallet-cli
     - ./amity-wallet-rpc
     - ./amityd
-    
