--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ arm64:
     - ./amityd 
 
 armhf:
-  image: amityproject/arm:builder
+  image: amityproject/armhf:builder
   stage: buildrelease
   script:
   - git submodule init && git submodule update
