--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 stages:
-  - buildrelease
+  - build
   - deploy
 
 linux64:
   image: amityproject/linux64:builder
-  stage: buildrelease
+  stage: build
   script:
   - git submodule init && git submodule update
   - make release-static
@@ -20,7 +20,7 @@ linux64-deploy:
   - make release-static
   - mv ./build/release/bin/* ./
   artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -33,12 +33,13 @@ linux64-deploy:
 
 win64:
   image: amityproject/win64:builder
-  stage: buildrelease
+  stage: build
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-win
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=x86_64-w64-mingw32
   except:
     - master
@@ -49,13 +50,14 @@ win64-deploy:
   stage: deploy
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-win
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=x86_64-w64-mingw32
   - mv ./build/x86_64-w64-mingw32/release/bin/* ./
   artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import.exe
     - ./amity-blockchain-export.exe
@@ -68,12 +70,13 @@ win64-deploy:
 
 macos64:
   image: amityproject/macos:builder
-  stage: buildrelease
+  stage: build
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-osx
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=x86_64-apple-darwin11
   except:
     - master
@@ -84,13 +87,14 @@ macos64-deploy:
   stage: deploy
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-osx
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=x86_64-apple-darwin11
   - mv ./build/x86_64-apple-darwin11/release/bin/* ./
   artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -103,12 +107,13 @@ macos64-deploy:
 
 arm64:
   image: amityproject/aarch64:builder
-  stage: buildrelease
+  stage: build
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-osx
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=aarch64-linux-gnu
   except:
     - master
@@ -119,13 +124,14 @@ arm64-deploy:
   stage: deploy
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=aarch64-linux-gnu
-  - mv ./build/aarch64-linux-gnu/release/bin/* ./  
+  - mv ~/build/aarch64-linux-gnu/release/bin/* ./  
   artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -137,12 +143,13 @@ arm64-deploy:
 
 armhf:
   image: amityproject/armhf:builder
-  stage: buildrelease
+  stage: build
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-linux
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=arm-linux-gnueabihf
   except:
     - master
@@ -153,13 +160,14 @@ armhf-deploy:
   stage: deploy
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-linux
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=arm-linux-gnueabihf
   - mv ./build/arm-linux-gnueabihf/release/bin/* ./ 
   artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -171,12 +179,13 @@ armhf-deploy:
 
 riscv64:
   image: amityproject/riscv64:builder
-  stage: buildrelease
+  stage: build
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-linux
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=riscv64-linux-gnu
   except:
     - master
@@ -187,13 +196,14 @@ riscv64-deploy:
   stage: deploy
   script:
   - git submodule init && git submodule update
-  - cd contrib/depends/
-  - make download-linux
-  - cd ../..
+  - rm -r contrib/depends
+  - cd contrib 
+  - cp -r ~/depends ./
+  - cd ../
   - make depends target=riscv64-linux-gnu
   - mv ./build/riscv64-linux-gnu/release/bin/* ./ 
   artifacts:
-    name: "$CI_JOB_NAME-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
