--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ linux64:
     - master
 
   
-linux64-deploy:
+LINUX64:
   image: amityproject/linux64:builder
   stage: deploy
   script:
@@ -20,7 +20,7 @@ linux64-deploy:
   - make release-static
   - mv ./build/release/bin/* ./
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -45,7 +45,7 @@ win64:
     - master
 
   
-win64-deploy:
+WIN64:
   image: amityproject/win64:builder
   stage: deploy
   script:
@@ -57,7 +57,7 @@ win64-deploy:
   - make depends target=x86_64-w64-mingw32
   - mv ./build/x86_64-w64-mingw32/release/bin/* ./
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import.exe
     - ./amity-blockchain-export.exe
@@ -82,7 +82,7 @@ macos64:
     - master
 
 
-macos64-deploy:
+MACOS64:
   image: amityproject/macos:builder
   stage: deploy
   script:
@@ -94,7 +94,7 @@ macos64-deploy:
   - make depends target=x86_64-apple-darwin11
   - mv ./build/x86_64-apple-darwin11/release/bin/* ./
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -119,7 +119,7 @@ arm64:
     - master
 
 
-arm64-deploy:
+ARM64:
   image: amityproject/aarch64:builder
   stage: deploy
   script:
@@ -131,7 +131,7 @@ arm64-deploy:
   - make depends target=aarch64-linux-gnu
   - mv ~/build/aarch64-linux-gnu/release/bin/* ./  
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -155,7 +155,7 @@ armhf:
     - master
 
 
-armhf-deploy:
+ARMHF:
   image: amityproject/armhf:builder
   stage: deploy
   script:
@@ -167,7 +167,7 @@ armhf-deploy:
   - make depends target=arm-linux-gnueabihf
   - mv ./build/arm-linux-gnueabihf/release/bin/* ./ 
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -191,7 +191,7 @@ riscv64:
     - master
 
 
-riscv64-deploy:
+RISCV64:
   image: amityproject/riscv64:builder
   stage: deploy
   script:
@@ -203,7 +203,7 @@ riscv64-deploy:
   - make depends target=riscv64-linux-gnu
   - mv ./build/riscv64-linux-gnu/release/bin/* ./ 
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
