--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ LINUX64:
     - ./amity-wallet-cli
     - ./amity-wallet-rpc
     - ./amityd
+    expire_in: 4 weeks
   only:
     - master
     - tags
@@ -67,6 +68,7 @@ WIN64:
     - ./amity-wallet-cli.exe
     - ./amity-wallet-rpc.exe
     - ./amityd.exe
+    expire_in: 4 weeks
   only:
     - master
     - tags
@@ -106,6 +108,7 @@ MACOS64:
     - ./amity-wallet-cli
     - ./amity-wallet-rpc
     - ./amityd
+    expire_in: 4 weeks
   only:
     - master
     - tags
@@ -145,6 +148,7 @@ ARM64:
     - ./amity-wallet-cli
     - ./amity-wallet-rpc
     - ./amityd
+    expire_in: 4 weeks
   only:
     - master
     - tags
@@ -183,6 +187,7 @@ ARMHF:
     - ./amity-wallet-cli
     - ./amity-wallet-rpc
     - ./amityd
+    expire_in: 4 weeks
   only:
     - master
     - tags
@@ -222,6 +227,7 @@ RISCV64:
     - ./amity-wallet-cli
     - ./amity-wallet-rpc
     - ./amityd
+    expire_in: 4 weeks
   only:
     - master
     - tags
