--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	path = external/unbound
 	url = https://github.com/monero-project/unbound
 	branch = monero
+[submodule "external/randomx"]
+	path = external/randomx
+	url = https://gitlab.com/amity-project/randomx
