--- a/contrib/depends/toolchain.cmake.in
+++ b/contrib/depends/toolchain.cmake.in
@@ -52,6 +52,9 @@ SET(BOOST_USE_STATIC_RUNTIME TRUE)
 SET(OpenSSL_DIR @prefix@/lib)
 SET(ARCHITECTURE @arch@)
 
+SET(CURL_INCLUDE_DIR @prefix@/include)
+SET(CURL_LIBRARIES @prefix@/lib/libcurl.a)
+
 # for libraries and headers in the target directories
 set (CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER) # Find programs on host
 set (CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY) # Find libs in target
