--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - deploy
 
 linux64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/armhf:latest
   stage: build
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -14,7 +14,7 @@ linux64:
 
   
 LINUX64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/armhf:latest
   stage: deploy
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -34,7 +34,7 @@ LINUX64:
 
 
 win64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/win64:latest
   stage: build
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -49,7 +49,7 @@ win64:
 
   
 WIN64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/win64:latest
   stage: deploy
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -110,7 +110,7 @@ MACOS64:
 
 
 arm64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/aarch64:latest
   stage: build
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -125,7 +125,7 @@ arm64:
 
 
 ARM64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/aarch64:latest
   stage: deploy
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -148,7 +148,7 @@ ARM64:
     - tags
 
 armhf:
-  image: amityproject/ubuntu:builder
+  image: amityproject/armhf:latest
   stage: build
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -163,7 +163,7 @@ armhf:
 
 
 ARMHF:
-  image: amityproject/ubuntu:builder
+  image: amityproject/armhf:latest
   stage: deploy
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -187,7 +187,7 @@ ARMHF:
 
 
 riscv64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/riscv64:latest
   stage: build
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
@@ -202,7 +202,7 @@ riscv64:
 
 
 RISCV64:
-  image: amityproject/ubuntu:builder
+  image: amityproject/riscv64:latest
   stage: deploy
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
