--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ macos64:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
-  - make release 
+  - release-static-mac-x86_64 
   tags:
     - macos
   only:
@@ -91,7 +91,7 @@ MACOS64:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
-  - make release
+  - release-static-mac-x86_64
   - mv ./build/release/bin/* ./
   artifacts:
     name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
