Change ARM Builds to NO_AES=ON by default
Common Devices like Raspberry Pi 3+ and Samsung Galaxy S10(Using UserLAnd)
do not have AES-NI Capable chips.  Will now build with NO AES by default.

--- a/contrib/depends/toolchain.cmake.in
+++ b/contrib/depends/toolchain.cmake.in
@@ -87,6 +87,7 @@ endif()
 
 if(ARCHITECTURE STREQUAL "arm")
   set(ARCH "armv7-a")
+  set(NO_AES ON)
   set(ARM ON)
   set(ARM_ID "armv7-a")
   set(BUILD_64 OFF)
@@ -94,6 +95,7 @@ if(ARCHITECTURE STREQUAL "arm")
   set(BUILD_TAG "linux-armv7")
   set(ARM7)
 elseif(ARCHITECTURE STREQUAL "aarch64")
+  set(NO_AES ON)
   set(ARCH "armv8-a")
   set(ARM ON)
   set(ARM_ID "armv8-a")
