--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ LINUX64:
   - make release-static
   - mv ./build/release/bin/* ./
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -61,7 +61,7 @@ WIN64:
   - make depends target=x86_64-w64-mingw32
   - mv ./build/x86_64-w64-mingw32/release/bin/* ./
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME"
     paths:
     - ./amity-blockchain-import.exe
     - ./amity-blockchain-export.exe
@@ -94,7 +94,7 @@ MACOS64:
   - make release
   - mv ./build/release/bin/* ./
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -137,7 +137,7 @@ ARM64:
   - make depends target=aarch64-linux-gnu
   - mv ./build/aarch64-linux-gnu/release/bin/* ./  
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -175,7 +175,7 @@ ARMHF:
   - make depends target=arm-linux-gnueabihf
   - mv ./build/arm-linux-gnueabihf/release/bin/* ./ 
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
@@ -214,7 +214,7 @@ RISCV64:
   - make depends target=riscv64-linux-gnu
   - mv ./build/riscv64-linux-gnu/release/bin/* ./ 
   artifacts:
-    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    name: "Amity-$CI_COMMIT_TAG-$CI_JOB_NAME"
     paths:
     - ./amity-blockchain-import
     - ./amity-blockchain-export
