--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -26,6 +26,10 @@ jobs:
         run: |
           make release-static -j2
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+
+
   aarch64_build:
     name: ${{ matrix.build_name }}
     runs-on: ubuntu-18.04
@@ -53,6 +57,10 @@ jobs:
           cp -r /root/depends ./
           cd ../
           make depends target=aarch64-linux-gnu -j2
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+
   
   armhf_build:
     name: ${{ matrix.build_name }}
@@ -82,6 +90,10 @@ jobs:
           cd ../
           make depends target=arm-linux-gnueabihf -j2
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+
+
   win64_build:
     name: ${{ matrix.build_name }}
     runs-on: ubuntu-18.04
@@ -109,6 +121,10 @@ jobs:
           cp -r /root/depends ./
           cd ../
           make depends target=x86_64-w64-mingw32 -j2
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+
           
   riscv64_build:
     name: ${{ matrix.build_name }}
@@ -138,6 +154,10 @@ jobs:
           cd ../
           make depends target=riscv64-linux-gnu -j2
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
+ 
+
   macos_build:
     name: ${{ matrix.build_name }}
     runs-on: macos-latest
@@ -158,6 +178,9 @@ jobs:
         if: matrix.build_name == 'MACOS'
         run: |
           make release-static-mac-x86_64 -j2
+        
+      - name: Upload artifact
+        uses: actions/upload-artifact@v1.0.0
 
 
       
